# iron-static

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
database/: README.md  ableton_devices.json  device_library.json  feeds.json  gcs_manifest.json  homework.json  instruments.json  pack_presets.json  plugins.json  songs.json  visual-style.json  voices.json
docs/: ableton-learning-plan.md  day-one-guide.md  github-actions-plan.md  instrument-distribution-plan.md  lom-api-ref.md  m4l-integration-plan.md  session-workflow.md
iron_static/: __init__.py  notify.py
outputs/: Ventura_clips.csv  Ventura_devices.json  Ventura_presets_map.json  audio_intake_manifest.json  live_state.json  orca-26I03-707479.orca  repo_health.json  repo_health_issues.md  ventura_summary.json
scripts/: _check_diff.py  _push_analog_bass.py  ableton_push.py  analyze_audio.py  audio_to_midi.py  bridge_client.py  build_db.py  build_session.py  chop_and_rack.py  compact_learnings.py  create_als.py  deploy_remote_script.py  discover_devices.py  elevenlabs_vocalist.py  extract_midi_clips.py  extract_pdf_docs.py  extract_rytm_midi_params.py  fetch_api_docs.py  fetch_reference_midi.py  find_project_presets.py  gcs_sync.py  gemini_forge.py  gemini_listen.py  generate_als.py  generate_caption.py  generate_promo_image.py  generate_promo_video.py  generate_youtube_token.py  index_manuals.py  index_pack_presets.py  install_hooks.py  llm_utils.py  manage_songs.py  maxpat_to_amxd.py  midi_control.py  midi_craft.py  notify_slack.py  parse_als.py  (+29 more)
(+889 files in other folders)
